--- a/从0到1实现React/1.JSX和虚拟DOM.md
+++ b/从0到1实现React/1.JSX和虚拟DOM.md
@@ -120,7 +120,7 @@ function setAttribute(dom, attr, value) {
   if (attr === 'className') {
     attr = 'class'
   }
-  if (attr.match('/on\w+/')) {   // 处理事件的属性:
+  if (attr.match(/on\w+/)) {   // 处理事件的属性:
     const eventName = attr.toLowerCase().substr(2)
     dom.addEventListener(eventName, value)
   } else if (attr === 'style') { // 处理样式的属性:
