--- a/从0到1实现React/20.测试之旅.md
+++ b/从0到1实现React/20.测试之旅.md
@@ -1,2 +1,2 @@
-在前文中的每个章节其实都穿插着测试用例，但是如果想让程序更加健壮，那就必须让它经过更加系统/全面的测试。日后计划拿 preact 的测试用例来挑战下...
+在前文中的每个章节其实都穿插着测试用例，但是如果想让程序更加健壮，那就必须让它经过更加系统/全面的测试。
 
