--- a/从0到1实现React/0.前置准备.md
+++ b/从0到1实现React/0.前置准备.md
@@ -9,39 +9,37 @@
 > 扩展延伸：[babel 执行机制](https://github.com/MuYunyun/blog/blob/master/BasicSkill/番外篇/babel执行机制.md)
 
 ```js
-"babel-core": "^6.26.0",
-"babel-preset-env": "^1.6.1",
-"babel-plugin-transform-react-jsx": "^6.24.1"
+"@babel/core": "^7.0.0",
+"@babel/preset-env": "^7.0.0",
+"@babel/preset-react": "^7.0.0",
+"babel-loader": "v8.0.0-beta.0",
 ```
 
 同时 `.babelrc` 配置如下：
 
 ```js
 {
-    "presets": ["env"],
-    "plugins": [
-        // 插件如其名：转化 JSX 语法为定义的形式
-        ["transform-react-jsx", {
-            "pragma": "React.createElement"
-        }]
-    ]
+	"presets": [
+		[
+			"@babel/preset-env",
+			{
+				"targets": "> 0.25%, not dead",
+				"useBuiltIns": "entry"
+			}
+		],
+		[
+			"@babel/preset-react", {
+				"pragma": "cpreact.createElement" // 该参数传向 transform-react-jsx 插件，是前置的一个核心，后文有解释为什么使用 cpreact.createElement
+			}
+		]
+	]
 }
 ```
 
 
 配置好 babel 后，接着提供两套打包工具的配置方案，读者可以自行选择。
 
-#### 方案一：使用 parcel
-
-[parcel](https://parceljs.org/getting_started.html) 是一款上手极快的打包工具，使用其可以快速地进入项目开发的状态。在 `package.json` 加上如下配置，具体可以参照 [0.1 版本](https://github.com/MuYunyun/cpreact/blob/0.1/package.json)
-
-```
-"scripts": {
-  "start": "parcel ./index.html --open -p 8080 --no-cache"
-},
-```
-
-#### 方案二：使用 webpack
+#### 方案 1：使用 webpack
 
 webpack 拥有一个活跃的社区，提供了更为丰富的打包能力。
 
@@ -90,3 +88,13 @@ module.exports = {
 ```
 
 具体可以参照 [0.4.3 版本](https://github.com/MuYunyun/cpreact/blob/master/webpack.config.js)
+
+#### 方案 2：使用 parcel
+
+[parcel](https://parceljs.org/getting_started.html) 是一款上手极快的打包工具，使用其可以快速地进入项目开发的状态。在 `package.json` 加上如下配置，具体可以参照 [0.1 版本](https://github.com/MuYunyun/cpreact/blob/0.1/package.json)
+
+```
+"scripts": {
+  "start": "parcel ./index.html --open -p 8080 --no-cache"
+},
+```
