--- a/BasicSkill/基础篇/二刷高程.md
+++ b/BasicSkill/基础篇/二刷高程.md
@@ -2,8 +2,6 @@
 
 > 理念：尽信书则不如无书
 
-> 目标：横扫脑子里空白的概念
-
 ### 重载
 
 Java/C++ 中是有函数重载的(即相同函数名，但传的参数不同是当成不同函数的),而 JavaScript 没有函数重载，旧其本质是因为 JavaScrit 中函数是一个对象。函数名类似一个指针。
@@ -224,4 +222,16 @@ a // 2
 
 因为没有引用指向匿名函数，所以执行完就可以垃圾回收，不造成内存浪费。
 
-###
+### 作用域安全的构造函数
+
+```js
+function Safe(value) {
+  if (this instanceof Safe) {
+    this.name = value
+  } else {
+    return new Safe(value)
+  }
+}
+```
+
+这种写法不管使用 `new Safe()` 还是 `Safe()` 能保证它们返回结果一致(作用域一致)。
