--- a/BasicSkill/基础篇/二刷高程.md
+++ b/BasicSkill/基础篇/二刷高程.md
@@ -235,3 +235,42 @@ function Safe(value) {
 ```
 
 这种写法不管使用 `new Safe()` 还是 `Safe()` 能保证它们返回结果一致(作用域一致)。
+
+### 防篡改对象
+
+* `Object.preventExtensions(obj)`: obj 不能添加属性
+* `Object.seal(obj)`: obj 不能添加/删除属性
+* `Object.freeze(obj)`: obj 不能添加/删除/修改属性
+
+### 防抖和节流函数最简版
+
+防抖: 多次触发事件只执行一次
+
+```js
+function debounce(fn, time) {
+  let timeout
+	return () => {
+    if (timeout) {
+      clearTimeout(timeout)
+    }
+    timeout = setTimeout({
+      fn
+    }, time)
+  }
+}
+```
+
+节流: 多次触发事件(在指定时间内)只执行一次
+
+```js
+function throttle(fn, time) {
+  let preTime = 0
+  return () => {
+    const remainTime = time - (Date.now() - preTime)
+    if (remainTime <= 0) {
+      fn()
+      preTime = Date.now()
+    }
+  }
+}
+```
