--- a/BasicSkill/基础篇/数组字符串方法小结(是否对原值有影响).md
+++ b/BasicSkill/基础篇/数组字符串方法小结(是否对原值有影响).md
@@ -22,7 +22,7 @@ console.log(test)   // [1, 2, 3]
 console.log(result) // [1, 2, 3, 4]
 ```
 
-### 对原数组有影响的方法
+### 对原数组有影响的方法(记这个相对容易)
 
 #### splice
 
