docs: react16 Context

--- a/从0到1实现React/16.RenderProps.md
+++ b/从0到1实现React/16.RenderProps.md
@@ -1,11 +1,12 @@
 ### Render Props
 
 * 概要：属性中传入函数，函数返回组件
-* 目的：不同组件间状态共享
+* 目的：封装行为
 
 ### demo
 
 ```js
+// 这个组件即封装的行为
 class PassState extends Component {
   constructor() {
     super()
@@ -41,4 +42,4 @@ class App extends Component {
 }
 ```
 
-当作一种模式来看待吧，个人觉得使用 HOC 能完成一样的效果。
+> 个人觉得使用 HOC 能完成一样的效果。
