docs: update 观察者模式

--- a/BasicSkill/readES6/扩展运算符.md
+++ b/BasicSkill/readES6/扩展运算符.md
@@ -6,7 +6,7 @@
 
 > 番外：对象中的扩展运算符的作用类似 Object.assign()，唯一区别在于 Object.assign() 可以用来*浅拷贝*目标对象的*全部属性(包括原型链上属性)中的可枚举属性*
 
-下面举例证明上述结论：
+下面举例证明上述结论:
 
 * 验证对象扩展符只能 copy 自有属性，原型链上的属性不能 copy
 
