--- a/BasicSkill/readES6/模块.md
+++ b/BasicSkill/readES6/模块.md
@@ -2,7 +2,7 @@
 
 #### 写法上的差异
 
-CommonJS 中常见导出和引人写法如下：
+CommonJS 中常见导出和引人写法如下:
 
 ```js
 // 导出
@@ -12,7 +12,7 @@ module.exports = a
 const a = require('./xxx')
 ```
 
-ES6 中常见导出和引人写法如下：
+ES6 中常见导出和引人写法如下:
 
 ```js
 // 导出
