--- a/BasicSkill/设计模式/观察者模式.md
+++ b/BasicSkill/设计模式/观察者模式.md
@@ -1,10 +1,15 @@
 ### 观察者模式
 
-当观察的数据对象发生变化时，自动调用相应函数。
+应用场景:
 
-#### 方法一：Object.defineProperty
+1. 场景一: 当观察的数据对象发生变化时，自动调用相应函数。比如 vue 的双向绑定;
+2. 场景二: 每当调用对象里的某个方法时，就会调用相应'访问'逻辑。比如给测试框架赋能的 spy 函数;
 
-方法一: 使用 Object.defineProperty(obj, props, descriptor) 实现观察者模式, 其也是 [vue 双向绑定](https://github.com/MuYunyun/blog/issues/11) 的核心，示例如下(当改变 obj 中的 value 的时候，自动调用相应相关函数)：
+### 场景一: 双向绑定
+
+#### Object.defineProperty
+
+使用 Object.defineProperty(obj, props, descriptor) 实现观察者模式, 其也是 [vue 双向绑定](https://github.com/MuYunyun/blog/issues/11) 的核心，示例如下(当改变 obj 中的 value 的时候，自动调用相应相关函数)：
 
 ```js
 var obj = {
@@ -20,7 +25,7 @@ Object.defineProperty(obj, 'value', {
 obj.value = 1 // 调用相应函数
 ```
 
-#### 方法二：Proxy
+#### Proxy
 
 Proxy/Reflect 是 ES6 引入的新特性，也可以使用其完成观察者模式，示例如下(效果同上)：
 
@@ -37,4 +42,45 @@ var proxy = new Proxy(obj, {
 })
 
 proxy.value = 1 // 调用相应函数
+```
+
+### 场景二
+
+下面来实现 sinon 框架的 spy 函数:
+
+```js
+const sinon = {
+  analyze: {},
+  spy: function(obj, fnName) {
+    const that = this
+    const oldFn = Object.getOwnPropertyDescriptor(obj, fnName).value
+    Object.defineProperty(obj, fnName, {
+      value: function() {
+        oldFn()
+        if (that.analyze[fnName]) {
+          that.analyze[fnName].count = ++that.analyze[fnName].count
+        } else {
+          that.analyze[fnName] = {}
+          that.analyze[fnName].count = 1
+        }
+        console.log(`${fnName} 被调用了 ${that.analyze[fnName].count} 次`)
+      }
+    })
+  }
+}
+
+const obj = {
+  someFn: function() {
+    console.log('my name is someFn')
+  }
+}
+
+sinon.spy(obj, 'someFn')
+
+obj.someFn()
+// my name is someFn
+// someFn 被调用了 1 次
+obj.someFn()
+// my name is someFn
+// someFn 被调用了 2 次
 ```
