feat: adjust document

--- a/BasicSkill/基础篇/二刷高程.md
+++ b/BasicSkill/基础篇/二刷高程.md
@@ -1,14 +1,14 @@
 ### 二刷高程
 
-> 理念：尽信书则不如无书
+> 理念: 尽信书则不如无书
 
 ### 重载
 
-Java/C++ 中是有函数重载的(即相同函数名，但传的参数不同是当成不同函数的),而 JavaScript 没有函数重载，旧其本质是因为 JavaScrit 中函数是一个对象。函数名类似一个指针。
+`Java/C++` 中是有函数重载的(即相同函数名，但传的参数不同是当成不同函数的), 而 `JavaScript` 没有函数重载，旧其本质是因为 `JavaScrit` 中函数是一个对象。函数名类似一个指针。
 
 ### label 语句的用法
 
-区分以下两段函数：
+区分以下两段函数:
 
 ```js
 let num = 0
@@ -259,6 +259,8 @@ function debounce(fn, time) {
   }
 }
 ```
+
+> 建议: 面试的时候先写出如上形式, 如果有时间再考虑实现带 `immediate` 形式的防抖函数。
 
 节流: 多次触发事件(在指定时间内)只执行一次
 
