--- a/BasicSkill/基础篇/正则表达式.md
+++ b/BasicSkill/基础篇/正则表达式.md
@@ -7,9 +7,9 @@
 | x? | 0 或 1 个 |
 | x{n} | n 个 |
 | x{n,} | 至少 n 个 |
-| x{n, m} | n 至 m 个，遵循贪婪原则，会尽可能匹配多个；如果在后面加个 ? (如 x{n, m}?), 遵循非贪婪原则 |
+| x{n, m} | n 至 m 个，遵循贪婪原则，会尽可能匹配多个; 如果在后面加个 ? (如 x{n, m}?), 遵循非贪婪原则 |
 
-> 贪婪可以理解成从后往前遍历，非贪婪可以理解为从前向后遍历
+> 贪婪可以理解成从后往前遍历, 非贪婪可以理解为从前向后遍历
 
 ### 字符限定符
 
@@ -50,9 +50,11 @@
 
 ### 特殊用法
 
-?= 正向预查：匹配以指定内容结束的字符串
-?! 负向预查：匹配不是以指定内容结束的字符串
-?: 不把选择匹配符的内容放到缓冲区
+| 特殊用法 | 解释 |
+|:---:|:---:|
+| ?= 正向预查 | 匹配以指定内容结束的字符串 |
+| ?! 负向预查 | 匹配不是以指定内容结束的字符串 |
+| ? | 不把选择匹配符的内容放到缓冲区 |
 
 ### 正则表达式在 JavaScript 下的使用方法
 
