--- a/BasicSkill/基础篇/编程范式.md
+++ b/BasicSkill/基础篇/编程范式.md
@@ -126,9 +126,9 @@ console.log(test)   // [1, 2, 3]
 console.log(result) // [1, 2, 3, 4]
 ```
 
-#### 对原数组有影响的方法(记这个相对容易)
+#### 对原数组有影响的方法
 
-##### splice
+##### splice(这个需要特别记一下)
 
 ```js
 var test = [1, 2, 3]
@@ -136,6 +136,15 @@ var result = test.splice(0, 1)
 
 console.log(test)   // [2, 3]
 console.log(result) // [1]
+```
+
+##### sort
+
+```js
+var arr = [2, 1, 3, 4]
+arr.sort((r1, r2) => (r1 - r2))
+
+console.log(arr) // [1, 2, 3, 4]
 ```
 
 ##### reverse
