--- a/BasicSkill/设计模式/观察者模式.md
+++ b/BasicSkill/设计模式/观察者模式.md
@@ -9,20 +9,22 @@
 
 #### Object.defineProperty
 
-使用 Object.defineProperty(obj, props, descriptor) 实现观察者模式, 其也是 [vue 双向绑定](https://github.com/MuYunyun/blog/issues/11) 的核心，示例如下(当改变 obj 中的 value 的时候，自动调用相应相关函数)：
+使用 `Object.defineProperty(obj, props, descriptor)` 实现观察者模式, 其也是 [vue 双向绑定](https://github.com/MuYunyun/blog/issues/11) 的核心, 示例如下(当改变 obj 中的 value 的时候，自动调用相应相关函数):
 
 ```js
 var obj = {
-  value: 0
+  data: { list: [] },
 }
 
-Object.defineProperty(obj, 'value', {
-  set(newValue) {
-    console.log('调用相应函数')
+Object.defineProperty(obj, 'list', {
+  get() {
+    return this.data['list']
+  },
+  set(val) {
+    console.log('值被更改了')
+    this.data['list'] = val
   }
 })
-
-obj.value = 1 // 调用相应函数
 ```
 
 #### Proxy
@@ -42,6 +44,7 @@ var proxy = new Proxy(obj, {
 })
 
 proxy.value = 1 // 调用相应函数
+
 ```
 
 ### 场景二
@@ -84,3 +87,15 @@ obj.someFn()
 // my name is someFn
 // someFn 被调用了 2 次
 ```
+
+### `vue` 在 3.0 版本上使用 `Proxy` 重构的原因
+
+首先罗列 `Object.defineProperty()` 的缺点:
+
+1. `Object.defineProperty()` 不会监测到数组引用不变的操作(比如 `push/pop` 等);
+2. `Object.defineProperty()` 只能监测到对象的属性的改变, 即如果有深度嵌套的对象则需要再次给之绑定 `Object.defineProperty()`;
+
+关于 `Proxy` 的优点
+
+1. 可以劫持数组的改变;
+2. `defineProperty` 是对属性的劫持, `Proxy` 是对对象的劫持;
