--- a/BasicSkill/http/网络协议.md
+++ b/BasicSkill/http/网络协议.md
@@ -9,6 +9,14 @@
 * 数据链路层
 * 物理层
 
+
+### TCP 特性
+
+关于可靠，有以下两点：
+
+* 按序传输
+* 可以将数据拆分成任意大小的包进行传输
+
 ### TCP 和 UDP 的区别
 
 TCP(Transmission Control Protocal): 传输控制协议
