docs: 竖直布局解决方案

--- a/BasicSkill/css/常用样式整理.md
+++ b/BasicSkill/css/常用样式整理.md
@@ -5,3 +5,15 @@ overflow: hidden;
 white-space: nowrap;
 text-overflow: ellipsis;
 ```
+
+### block/inline-block/inline 的区别
+
+* block: 有宽高, 不在同一行;
+* inline-block: 有宽高，在同一行;
+* inline: 无宽高, 在同一行;
+
+### verticle-align
+
+* verticle-align: top
+
+> [行高与基线](https://blog.csdn.net/lulujiajiawenwen/article/details/8245201)
