--- a/BasicSkill/React周边/如何写测试用例.md
+++ b/BasicSkill/React周边/如何写测试用例.md
@@ -3,17 +3,17 @@
 * jest: 大而全
 * mocha: 可搭配周边生态
 
+### 测试总类
+
+* e2e 测试: 端到端测试，目前理解是模拟用户操作行为的测试，其实 `jest`、`mocha` 都应该有相应 e2e 测试的 api。
+
 ### 测试风格
 
 * BDD 风格: `foo.should.equal('bar')` 或者 `expect(foo).to.equal('bar')`;
-* TDD 风格: `assert.equal(foo, 'bar', 'foo equal `bar`')`, diana 中的测试风格;
+* TDD 风格: `assert.equal(foo, 'bar', 'foo equal bar')`, diana 中的测试风格;
 
 > 见 [Chai](https://www.chaijs.com/guide/styles/)
 
 ### Enzyme
 
 封装了 React 相关测试 api 的一个工具库。
-
-```js
-
-```
