docs: 函数式编程compose

--- a/BasicSkill/基础篇/函数式编程指南.md
+++ b/BasicSkill/基础篇/函数式编程指南.md
@@ -16,7 +16,7 @@ const demo = ajaxCall // 需要 ajaxCall 函数做参数的扩充，这样子相
 
 如果 `ajaxCall` 函数参数是未知的, 那每次修改依然不便, 因此引人 `curry` 函数。
 
-### curry
+### 柯里化(curry)
 
 如下是一个加法函数:
 
@@ -31,6 +31,7 @@ add(1, 2, 3) // 6
 ```js
 var curryAdd = curry(add)
 
+// 以下输出结果都相同
 curryAdd(1, 2, 3) // 6
 curryAdd(1, 2)(3) // 6
 curryAdd(1)(2)(3) // 6
@@ -39,28 +40,73 @@ curryAdd(1)(2, 3) // 6
 
 #### 动手实现一个 curry 函数
 
-核心思路: 若传进去的参数个数未达到 `curryAdd` 的个数，则将其缓存在闭包中:
+核心思路: 若传进去的参数个数未达到 `curryAdd` 的个数，则将参数缓存在闭包变量 lists 中:
 
 ```js
-function curry(fn, args) {
+function curry(fn, ...args) {
   const length = fn.length
-  const lists = args || []
+  let lists = args || []
 
   let listLen
-  return function(_args) {
-    lists.push(_args)
+  return function (..._args) {
+    lists = [...lists, ..._args]
     listLen = lists.length
 
     if (listLen < length) {
-      return curry(fn, args)
-    } else {
-      return fn.apply(this, args)
+      const that = lists
+      lists = []
+      return curry(fn, ...that)
+    } else if (listLen === length) {
+      const that = lists
+      lists = []
+      return fn.apply(this, that)
     }
   }
 }
 ```
 
-验证: ...
+### 代码组合(compose)
+
+现在有 `toUpperCase`、`reverse`、`head` 三个函数, 分别如下:
+
+```js
+var toUpperCase = (str) => str.toUpperCase()
+var reverse = (arr) => arr.reverse()
+var head = (arr) => arr[0]
+```
+
+接着使用它们实现将数组末位元素大写化输出, 可以这样做:
+
+```js
+var reverseHeadUpperCase = (arr) => toUpperCase(head(reverse(arr)))
+
+reverseHeadUpperCase(['apple', 'banana', 'peach']) // "PEACH"
+```
+
+此时在构建 `reverseHeadUpperCase` 函数的时候, 必须手动声明传入参数 arr, 是否能提供一个 `compose` 函数让使用者更加友好的使用呢? 类似如下形式:
+
+```js
+var reverseHeadUpperCase = compose(toUpperCase, head, reverse)
+
+reverseHeadUpperCase(['apple', 'banana', 'peach']) // "PEACH"
+```
+
+此外 `compose` 函数符合`结合律`, 我们可以这样子使用:
+
+```js
+compose(compose(toUpperCase, head), reverse)
+compose(toUpperCase, compose(head, reverse))
+```
+
+以上两种写法与 `compose(toUpperCase, head, reverse)` 的效果完全相同, 都是依次从右到左执行传参中的函数。
+
+#### 动手实现一个 compose 函数
+
+代码精华集中在一行之内, 其为众多开源库(比如 Redux) 所采用。
+
+```js
+var compose = (...args) => (initValue) => args.reduceRight((a, c) => c(a), initValue)
+```
 
 ### 参考
 
