docs: suspense解决了什么

--- a/BasicSkill/基础篇/函数式编程指南.md
+++ b/BasicSkill/基础篇/函数式编程指南.md
@@ -1,8 +1,10 @@
 因为本章讲的是函数式编程，所以立场上更加偏向函数而非 OO 的概念。
 
-### 我们在做什么
+### 什么是函数式编程
 
-在本章中学习了函数式编程可以用简单如`交换律、结合律、分配律`的数学之法来帮我们简化代码的实现
+函数式编程: 数据在由纯函数组成的管道中传递。
+
+> 函数式编程可以用简单如`交换律、结合律、分配律`的数学之法来帮我们简化代码的实现。
 
 ### 函数是一等公民
 
@@ -100,12 +102,55 @@ compose(toUpperCase, compose(head, reverse))
 
 以上两种写法与 `compose(toUpperCase, head, reverse)` 的效果完全相同, 都是依次从右到左执行传参中的函数。
 
+此外 `compose` 和 `map` 一起使用时也有相关的结合律, 以下两种写法效果相等
+
+```js
+compose(map(f), map(g))
+map(compose(f, g))
+```
+
 #### 动手实现一个 compose 函数
 
 代码精华集中在一行之内, 其为众多开源库(比如 Redux) 所采用。
 
 ```js
 var compose = (...args) => (initValue) => args.reduceRight((a, c) => c(a), initValue)
+```
+
+### 第 7 章: 特百惠
+
+`functor` 是实现了 map 函数的容器, 模型可表示如下:
+
+```js
+var Container = function(value) {
+  this.value = value
+}
+
+Container.prototype.map = function(fn) {
+  return new Container(fn(this.value))
+}
+```
+
+`pointed functor` 是在 `functor` 的基础上实现了 `of` 的容器:
+
+```js
+Container.of = new Container(value)
+```
+
+下面这段代码对阅读文章有帮助, 先记下
+
+```js
+var map = curry(function(f, any_functor_at_all) {
+  return any_functor_at_all.map(f);
+});
+```
+
+`monod` 是在 `pointed functor` 基础上又实现了 `join` 方法:
+
+```js
+Container.prototype.join = function() {
+  return this.value
+}
 ```
 
 ### 参考
