--- a/BasicSkill/基础篇/函数式编程指南.md
+++ b/BasicSkill/基础篇/函数式编程指南.md
@@ -117,40 +117,164 @@ map(compose(f, g))
 var compose = (...args) => (initValue) => args.reduceRight((a, c) => c(a), initValue)
 ```
 
-### 第 7 章: 特百惠
+### 范畴论
 
-`functor` 是实现了 map 函数的容器, 模型可表示如下:
+范畴论是数学中的一个分支。可以将范畴理解为一个容器, 把原来对值的操作，现转为对容器的操作。如下图:
+
+![](http://with.muyunyun.cn/c65fa1b63dbe9fa0a0771e7e561dc85b.jpg-200)
+
+> 学习函数式编程就是学习各种函子的过程。
+
+函数式编程中, `函子(Functor)` 是实现了 `map` 函数的容器, 下文中将函子视为范畴，模型可表示如下:
 
 ```js
-var Container = function(value) {
-  this.value = value
-}
+class Functor {
+  constructor(value) {
+    this.value = value
+  }
 
-Container.prototype.map = function(fn) {
-  return new Container(fn(this.value))
+  map(fn) {
+    return new Functor(fn(this.value))
+  }
 }
 ```
 
-`pointed functor` 是在 `functor` 的基础上实现了 `of` 的容器:
+但是在函数式编程中, 要避免使用 `new` 这种面向对象的编程方式, 取而代之对外暴露了一个 `of` 的接口, 也称为 `pointed functor`。
 
 ```js
-Container.of = new Container(value)
+Functor.of = value => new Functor(value)
 ```
 
-下面这段代码对阅读文章有帮助, 先记下
+#### Maybe 函子
+
+`Maybe 函子`是为了解决 `this.value` 为 null 的情形, 用法如下:
 
 ```js
-var map = curry(function(f, any_functor_at_all) {
-  return any_functor_at_all.map(f);
-});
+Maybe.of(null).map(r => r.toUpperCase()) // null
+Maybe.of('m').map(r => r.toUpperCase())  // Maybe {value: "M"}
 ```
 
-`monod` 是在 `pointed functor` 基础上又实现了 `join` 方法:
+实现代码如下:
 
 ```js
-Container.prototype.join = function() {
-  return this.value
+class Maybe {
+  constructor(value) {
+    this.value = value
+  }
+
+  map(fn) {
+    return this.value ? new Maybe(fn(this.value)) : null
+  }
 }
+
+Maybe.of = value => new Maybe(value)
+```
+
+#### Either 函子
+
+`Either 函子` 是为了对应 `if...else...` 的语法, 即`非左即右`。因此可以将之拆分为 `Left` 和 `Right` 两个函子, 它们的用法如下:
+
+```js
+Left.of(1).map(r => r + 1)  // Left {value: 1}
+
+Right.of(1).map(r => r + 1) // Right {value: 2}
+```
+
+`Left 函子`实现代码如下:
+
+```js
+class Left {
+  constructor(value) {
+    this.value = value
+  }
+
+  map(fn) {
+    return this
+  }
+}
+
+Left.of = value => new Left(value)
+```
+
+`Right 函子`实现代码如下(其实就是上面的 `Functor`):
+
+```js
+class Right {
+  constructor(value) {
+    this.value = value
+  }
+
+  map(fn) {
+    return new Right(fn(this.value))
+  }
+}
+
+Right.of = value => new Right(value)
+```
+
+具体 `Either` 函数只是对调用 `Left 函子` 或 `Right 函子` 作一层筛选, 其接收 `f`、`g` 两个函数以及一个函子(`Left or Right`)
+
+```js
+var Either = function(f, g, functor) {
+  switch(functor.constructor) {
+    case 'Left':
+      return f(functor.value)
+    case 'Right':
+      return g(functor.value)
+    default:
+      return f(functor.value)
+  }
+}
+```
+
+使用 demo:
+
+```js
+Either((v) => console.log('left', v), (v) => console.log('def', v), left)   // left 1
+Either((v) => console.log('rigth', v), (v) => console.log('def', v), rigth) // rigth 2
+```
+
+#### Monad 函子
+
+函子会发生嵌套, 比如下面这样:
+
+```js
+Functor.of(Functor.of(1)) // Functor { value: Functor { value: 1 } }
+```
+
+`Monad 函子` 对外暴露了 `join` 和 `flatmap` 接口, 调用者从而可以扁平化嵌套的函子。
+
+```js
+class Monad {
+  constructor(value) {
+    this.value = value
+  }
+
+  map(fn) {
+    return new Monad(fn(this.value))
+  }
+
+  join() {
+    return this.value
+  }
+
+  flatmap(fn) {
+    return this.map(fn).join()
+  }
+}
+
+Monad.of = value => new Monad(value)
+```
+
+使用方法:
+
+```js
+// join
+Monad.of(Monad.of(1).join()) // Monad { value: 1 }
+Monad.of(Monad.of(1)).join() // Monad { value: 1 }
+
+// flatmap
+Monad.of(1).flatmap(r => r + 1)  // 2
 ```
 
 ### 参考
@@ -158,3 +282,12 @@ Container.prototype.join = function() {
 * [mostly-adequate-guide](https://mostly-adequate.gitbooks.io/mostly-adequate-guide)
 * [JavaScript 函数式编程指南](https://llh911001.gitbooks.io/mostly-adequate-guide-chinese)
 * [JavaScript 专题之函数柯里化](https://github.com/mqyqingfeng/Blog/issues/42)
+* [函数式编程入门教程](http://www.ruanyifeng.com/blog/2017/02/fp-tutorial.html)
+
+<!-- 下面这段代码对阅读文章有帮助, 先记下
+
+```js
+var map = curry(function(f, any_functor_at_all) {
+  return any_functor_at_all.map(f);
+});
+``` -->
