docs: 函数式编程入门

--- a/BasicSkill/编程范式/函数式编程入门.md
+++ b/BasicSkill/编程范式/函数式编程入门.md
@@ -1,22 +1,102 @@
-因为本章讲的是函数式编程，所以立场上更加偏向函数而非 OO 的概念。
+### 命令式编程和声明式编程
 
-### 什么是函数式编程
+拿泡茶这个事例进行区分命令式编程和声明式编程
 
-函数式编程: 数据在由纯函数组成的管道中传递。
+* 命令式编程
+
+1.烧开水(为第一人称)
+2.拿个茶杯
+3.放茶叶
+4.冲水
+
+* 声明式编程
+
+1.给我泡杯茶(为第二人称)
+
+举个 demo
+
+```js
+// 命令式编程
+const convert = function(arr) {
+  const result = []
+  for (let i = 0; i < arr.length; i++) {
+    result[i] = arr[i].toLowerCase()
+  }
+  return result
+}
+
+// 声明式编程
+const convert = function(arr) {
+  return arr.map(r => r.toLowerCase())
+}
+```
+
+### 函数式编程
+
+函数式编程是声明式编程的范式。在函数式编程中数据在由纯函数组成的管道中传递。
 
 > 函数式编程可以用简单如`交换律、结合律、分配律`的数学之法来帮我们简化代码的实现。
 
-### 函数是一等公民
+它具有如下一些特性:
+
+* 纯粹性: 纯函数不改变除当前作用域以外的值;
 
 ```js
-const demo = (callback) => ajaxCall((json) => callback(json))
+// 反面示例
+let a = 0
+const add = (b) => a = a + b // 两次 add(1) 结果不一致
 
-// 可以这样写
-
-const demo = ajaxCall // 需要 ajaxCall 函数做参数的扩充，这样子相对上面易懂
+// 正确示例
+const add = (a, b) => a + b
 ```
 
-如果 `ajaxCall` 函数参数是未知的, 那每次修改依然不便, 因此引人 `curry` 函数。
+* 数据不可变性: Immutable
+
+```js
+// 反面示例
+const arr = [1, 2]
+const arrAdd = (value) => {
+  arr.push(value)
+  return arr
+}
+
+arrAdd(3) // [1, 2, 3]
+arrAdd(3) // [1, 2, 3, 3]
+
+// 正面示例
+const arr = [1, 2]
+const arrAdd = (value) => {
+  return arr.concat(value)
+}
+
+arrAdd(3) // [1, 2, 3]
+arrAdd(3) // [1, 2, 3]
+```
+
+> 在后记 1 中对数组字符串方法是否对原值有影响作了整理
+
+* 函数柯里化: 将多个入参的函数转化为一个入参的函数;
+
+```js
+const add = a => b => c => a + b + c
+add(1)(2)(3)
+```
+
+* 偏函数: 将多个入参的函数转化成两部分;
+
+```js
+const add = a => (b, c) => a + b + c
+add(1)(2, 3)
+```
+
+* 可组合: 函数之间能组合使用
+
+```js
+const add = (x) => x + x
+const mult = (x) => x * x
+
+const addAndMult = (x) => add(mult(x))
+```
 
 ### 柯里化(curry)
 
@@ -277,17 +357,103 @@ Monad.of(Monad.of(1)).join() // Monad { value: 1 }
 Monad.of(1).flatmap(r => r + 1)  // 2
 ```
 
+> Monad 函子可以运用在 I/O 这种不纯的操作上将之变为纯函数的操作，目前比较懵懂，日后补充。
+
+### 后记 1: 数组字符串方法小结(是否对原值有影响)
+
+#### 不会对原数组有影响的方法
+
+##### slice
+
+```js
+var test = [1, 2, 3]
+var result = test.slice(0, 1)
+
+console.log(test)   // [1, 2, 3]
+console.log(result) // [1]
+```
+
+##### concat
+
+```js
+var test = [1, 2, 3]
+var result = test.concat(4)
+
+console.log(test)   // [1, 2, 3]
+console.log(result) // [1, 2, 3, 4]
+```
+
+#### 对原数组有影响的方法
+
+##### splice(这个需要特别记一下)
+
+```js
+var test = [1, 2, 3]
+var result = test.splice(0, 1)
+
+console.log(test)   // [2, 3]
+console.log(result) // [1]
+```
+
+##### sort
+
+```js
+var arr = [2, 1, 3, 4]
+arr.sort((r1, r2) => (r1 - r2))
+
+console.log(arr) // [1, 2, 3, 4]
+```
+
+##### reverse
+
+```js
+var test = [1, 2, 3]
+var result = test.reverse()
+
+console.log(test)   // [3, 2, 1]
+console.log(result) // [3, 2, 1]
+```
+
+##### push/pop/unshift/shift
+
+```js
+var test = [1, 2, 3]
+var result = test.push(4)
+
+console.log(test)   // [1, 2, 3, 4]
+console.log(result) // 4
+```
+
+#### 不会对原字符串造成影响的方法
+
+##### substr/substring/slice
+
+```js
+// substr
+var test = 'abc'
+var result = test.substr(0, 1)
+
+console.log(test)   // 'abc'
+console.log(result) // a
+
+// substring
+var test = 'abc'
+var result = test.substring(0, 1)
+
+console.log(test)   // 'abc'
+console.log(result) // a
+
+// slice
+var test = 'abc'
+var result = test.slice(0, 1)
+
+console.log(test)   // 'abc'
+console.log(result) // a
+```
+
 ### 参考
 
 * [mostly-adequate-guide](https://mostly-adequate.gitbooks.io/mostly-adequate-guide)
 * [JavaScript 函数式编程指南](https://llh911001.gitbooks.io/mostly-adequate-guide-chinese)
 * [JavaScript 专题之函数柯里化](https://github.com/mqyqingfeng/Blog/issues/42)
 * [函数式编程入门教程](http://www.ruanyifeng.com/blog/2017/02/fp-tutorial.html)
-
-<!-- 下面这段代码对阅读文章有帮助, 先记下
-
-```js
-var map = curry(function(f, any_functor_at_all) {
-  return any_functor_at_all.map(f);
-});
-``` -->
