docs: 一些关于 requestIdleCallback 的想法

--- a/BasicSkill/React周边/外文推荐.md
+++ b/BasicSkill/React周边/外文推荐.md
@@ -1,3 +1,15 @@
 ### to read
 
-* [react-as-a-ui-runtime](https://overreacted.io/react-as-a-ui-runtime/)
+* [react-as-a-ui-runtime](https://overreacted.io/react-as-a-ui-runtime/): 阅读笔记
+
+> 组件为什么写成 `<Form />` 而不是 `Form()`
+
+结合编译时能做更多事情
+
+> `React.memo()` 和 `useMemo()` 的区别
+
+`useMemo()` 的粒度比 `React.memo()` 更细
+
+> 什么时候使用 setState((state, props) => stateChange) 而不用 setState({})
+
+点击一个按钮, 连续使用 setState 进行三次的增加, 如果使用 setState({}) 会造成 state 的合并, 使用 setState((state, props) => stateChange) 没有这个问题。
