docs: 定制自己的 react-script

--- a/BasicSkill/基础篇/二刷高程.md
+++ b/BasicSkill/基础篇/二刷高程.md
@@ -244,7 +244,7 @@ function Safe(value) {
 
 ### 防抖和节流函数最简版
 
-防抖: 多次触发事件只执行一次
+防抖: 多次触发事件只执行一次(适用于断续的事件, 比如 `click`、`input`)
 
 ```js
 function debounce(fn, time) {
@@ -262,7 +262,7 @@ function debounce(fn, time) {
 
 > 建议: 面试的时候先写出如上形式, 如果有时间再考虑实现带 `immediate` 形式的防抖函数。
 
-节流: 多次触发事件(在指定时间内)只执行一次
+节流: 在指定时间内多次触发事件只执行一次(适用于连续的事件, 比如 `scroll`)
 
 ```js
 function throttle(fn, time) {
