docs: Swipe 组件开发心得

--- a/BasicSkill/React周边/源码贡献之路.md
+++ b/BasicSkill/React周边/源码贡献之路.md
@@ -4,14 +4,31 @@
 
 这篇文章中介绍了逆向工程思维是什么 —— 去探究新知识点，并为之兴奋。
 
-* 读源码的时候可以将零星的知识记录下来，最后合成一张思维导图。
+阅读源码可以分三步走:
 
-- [ ] [Practical application of reverse-engineering guidelines and principles](https://medium.com/react-in-depth/practical-application-of-reverse-engineering-guidelines-and-principles-784c004bb657): 结合 react 介绍逆向工程思维
+1. 观察
+2. 假设
+3. 验证
+
+#### 一些技巧
+
+* 使用逆向工程思维阅读源码可以一边在本地看 `source` 代码(结合 IDE 找代码更加快)，一边使用 [Add React to a Website](https://reactjs.org/docs/add-react-to-a-website.html) 的方式调试 demo / 验证猜想;
+* 读源码的时候可以将零星的知识记录下来，最后合成一张思维导图;
+* 有些复杂的递归逻辑可以结合自己的原生知识在需要的位置上进行断点调试;
+* `debugger` 在 `chrome` 上运用 `decorator`, 如下图;
+
+![debugger 在 chrome 上的方法](https://cdn-images-1.medium.com/max/1600/1*h9Uo6Su5-Y1LcVRfox4UqA.jpeg)
+
+- [x] [Practical application of reverse-engineering guidelines and principles](https://medium.com/react-in-depth/practical-application-of-reverse-engineering-guidelines-and-principles-784c004bb657): 结合 react 介绍逆向工程思维
 
 ### to read
 
 - [ ] [The how and why on React’s usage of linked list in Fiber to walk the component’s tree](https://medium.com/react-in-depth/the-how-and-why-on-reacts-usage-of-linked-list-in-fiber-67f1014d0eb7)
 
+> 阅读到 Fiber’s architecture has two major phases: reconciliation/render and commit.
+
 - [ ] [Inside Fiber: in-depth overview of the new reconciliation algorithm in React](https://medium.com/react-in-depth/inside-fiber-in-depth-overview-of-the-new-reconciliation-algorithm-in-react-e1c04700ef6e): 在读
 
 为什么称呼从 `diff` 转为 `reconciliation`
+
+- [ ] [react-fiber-architecture](https://github.com/acdlite/react-fiber-architecture)
