--- a/BasicSkill/readES6/箭头函数.md
+++ b/BasicSkill/readES6/箭头函数.md
@@ -31,7 +31,7 @@ var self = this
 
 ```js
 var inputTest = document.getElementsByTagName('input')
-inputTest[0].addEventListener('click', function {
+inputTest[0].addEventListener('click', function() {
   console.log(this) // 指向 input
 })
 
