--- a/BasicSkill/readES6/装饰器.md
+++ b/BasicSkill/readES6/装饰器.md
@@ -38,7 +38,7 @@ test.logger() // MyClass 被调用
 由于装饰器是表达式, 我们也可以在装饰器后面再添加提个参数:
 
 ```js
-@log('hi')
+@log('hello')
 class MyClass { }
 
 function log(text) {
