--- a/BasicSkill/readES6/继承.md
+++ b/BasicSkill/readES6/继承.md
@@ -27,7 +27,7 @@ child11.arr // [1, 2, 3, 4]
 child12.arr // [1, 2, 3]
 ```
 
-优点: 构造函数的属性具有唯一性(child11.arr 与 child12.arr), 可参考[二刷高程](https://github.com/MuYunyun/blog/blob/master/BasicSkill/JavaScript/二刷高程.md)
+优点: 构造函数的属性具有唯一性(child11.arr 与 child12.arr), 可参考[红皮书里的细节](https://github.com/MuYunyun/blog/blob/master/BasicSkill/%E5%9F%BA%E7%A1%80%E7%AF%87/%E4%BA%8C%E5%88%B7%E9%AB%98%E7%A8%8B.md#%E6%9E%84%E9%80%A0%E5%87%BD%E6%95%B0%E6%A8%A1%E5%BC%8F)
 缺点: 只能继承父类函数的方法和属性, 而不能继承原型对象的方法和属性
 
 #### 基于原型链的继承
