docs: 添加组件开发模块

--- a/React/源码贡献之路.md
+++ b/React/源码贡献之路.md
@@ -32,3 +32,4 @@
 为什么称呼从 `diff` 转为 `reconciliation`
 
 - [ ] [react-fiber-architecture](https://github.com/acdlite/react-fiber-architecture)
+- [ ] [Lin Clark - A Cartoon Intro to Fiber - React Conf 2017](https://www.youtube.com/watch?v=ZCuYPiUIONs)
