docs: Fiber 的数据结构

--- a/React/源码贡献之路.md
+++ b/React/源码贡献之路.md
@@ -25,7 +25,7 @@
 
 - [ ] [The how and why on React’s usage of linked list in Fiber to walk the component’s tree](https://medium.com/react-in-depth/the-how-and-why-on-reacts-usage-of-linked-list-in-fiber-67f1014d0eb7)
 
-> 阅读到 Fiber’s architecture has two major phases: reconciliation/render and commit.
+> 阅读到 As you can see, the stack doesn’t grow as we walk down the tree.实现 https://stackblitz.com/edit/js-tle1wr
 
 - [ ] [Inside Fiber: in-depth overview of the new reconciliation algorithm in React](https://medium.com/react-in-depth/inside-fiber-in-depth-overview-of-the-new-reconciliation-algorithm-in-react-e1c04700ef6e): 在读
 
@@ -33,3 +33,6 @@
 
 - [ ] [react-fiber-architecture](https://github.com/acdlite/react-fiber-architecture)
 - [ ] [Lin Clark - A Cartoon Intro to Fiber - React Conf 2017](https://www.youtube.com/watch?v=ZCuYPiUIONs)
+
+
+- [ ] [How to Contribute](https://reactjs.org/docs/how-to-contribute.html)
