--- a/BasicSkill/readES6/扩展运算符.md
+++ b/BasicSkill/readES6/扩展运算符.md
@@ -73,7 +73,7 @@ const arr = [1, 2, 3]
 const cpArr = []
 
 cpArr.push(...arr)
-cpArr // [1, 2, 3]l
+cpArr // [1, 2, 3]
 ```
 
 因为这个特性, 我们还可以合并数组, 如下所示:
@@ -96,7 +96,7 @@ a // 1
 b // [2, 3]
 ```
 
-> 扩展运算符用来做结构赋值时, 只能放在最后一位
+> 扩展运算符用来做解构赋值时, 只能放在最后一位
 
 3. 传参中使用, 将所传的参数变为数组
 
