--- a/React/源码贡献之路.md
+++ b/React/源码贡献之路.md
@@ -1,9 +1,5 @@
 ### 逆向工程思维
 
-- [x] [Level Up Your Reverse Engineering Skills](https://blog.angularindepth.com/level-up-your-reverse-engineering-skills-8f910ae10630)
-
-这篇文章中介绍了逆向工程思维是什么 —— 去探究新知识点，并为之兴奋。
-
 阅读源码可以分三步走:
 
 1. 观察
@@ -19,4 +15,8 @@
 
 ![debugger 在 chrome 上的方法](https://cdn-images-1.medium.com/max/1600/1*h9Uo6Su5-Y1LcVRfox4UqA.jpeg)
 
-- [x] [Practical application of reverse-engineering guidelines and principles](https://medium.com/react-in-depth/practical-application-of-reverse-engineering-guidelines-and-principles-784c004bb657): 结合 react 介绍逆向工程思维
+### 相关资源
+
+- [x] [Level Up Your Reverse Engineering Skills](https://blog.angularindepth.com/level-up-your-reverse-engineering-skills-8f910ae10630): 这篇文章中介绍了逆向工程思维是什么 —— 去探究新知识点，并为之兴奋;
+- [x] [Practical application of reverse-engineering guidelines and principles](https://medium.com/react-in-depth/practical-application-of-reverse-engineering-guidelines-and-principles-784c004bb657): 结合 React 介绍逆向工程思维;
+- [ ] [How to Contribute](https://reactjs.org/docs/how-to-contribute.html)
