--- a/BasicSkill/readES6/继承.md
+++ b/BasicSkill/readES6/继承.md
@@ -59,7 +59,7 @@ child22.arr // [1, 2, 3, 4]
 ```
 
 优点: 继承父类函数的方法和属性同时继承了原型对象的方法和属性
-缺点: 当在一个子类的实例上修改父类的属性和方法时, 其它的子类也会受到影响(相当于改变了子类原型链上的属性, 可以参考[二刷高程](https://github.com/MuYunyun/blog/blob/master/BasicSkill/JavaScript/二刷高程.md)
+缺点: 当在一个子类的实例上修改父类的属性和方法时, 其它的子类也会受到影响(相当于改变了子类原型链上的属性, 可以参考[二刷高程](https://github.com/MuYunyun/blog/blob/master/BasicSkill/%E5%9F%BA%E7%A1%80%E7%AF%87/%E4%BA%8C%E5%88%B7%E9%AB%98%E7%A8%8B.md#%E5%8E%9F%E5%9E%8B%E9%93%BE%E6%A8%A1%E5%BC%8F)
 
 ------ 补充 ------
 
