docs: 深入 fiber 架构

--- a/React/源码贡献之路.md
+++ b/React/源码贡献之路.md
@@ -15,8 +15,39 @@
 
 ![debugger 在 chrome 上的方法](https://cdn-images-1.medium.com/max/1600/1*h9Uo6Su5-Y1LcVRfox4UqA.jpeg)
 
+### 一些注意
+
+* pr 到 master 分支
+
+* [good-first-issues](https://github.com/facebook/react/issues?q=is:open+is:issue+label:%22good+first+issue%22)
+
+### 代码库概览
+
+> [官网 repo](https://github.com/reactjs/reactjs.org)、[React 依赖的工具库](https://github.com/facebook/fbjs)
+
+#### 根目录
+
+* [packages](https://github.com/facebook/react/tree/master/packages): 核心模块
+* [fixtures](https://github.com/facebook/react/tree/master/fixtures): 一些测试 App
+* build: 开发者本地执行 yarn build 后生成
+
+#### monorepo
+
+* [packages/react](https://github.com/facebook/react/tree/master/packages/react): 包含 React.createElement()、React.component、React.children;
+* [packages/react-dom](https://github.com/facebook/react/tree/master/packages/react-dom): 浏览器端渲染;
+* [packages/react-native-renderer](https://github.com/facebook/react/tree/master/packages/react-native-renderer): `React-Native` 端渲染
+* [packages/react-test-renderer](https://github.com/facebook/react/tree/master/packages/react-test-renderer): 用在 `jest` 的 `Snapshot Test` 中;
+* [packages/react-art](https://github.com/facebook/react/tree/master/packages/react-art): `Canvas`, `SVG` 等渲染;
+* [packages/react-reconciler](https://github.com/facebook/react/tree/master/packages/react-reconciler): `Fiber Reconciler` 的实现;
+* [packages/events](https://github.com/facebook/react/tree/master/packages/events): 合成事件;
+
+### 设计原则
+
+* 组合。组件是可以互相组合的函数。
+* 抽象。`React` 只会抽象一些确实对使用者有帮助的特性(比如 `State、LifeCycle`)，而不会抽象一些使用者自己可以实现的功能。`React 团队` 会在 [Big Picture](https://github.com/facebook/react/issues?q=is:open+is:issue+label:%22Type:+Big+Picture%22) 中和大家商榷这些抽象。
+
 ### 相关资源
 
 - [x] [Level Up Your Reverse Engineering Skills](https://blog.angularindepth.com/level-up-your-reverse-engineering-skills-8f910ae10630): 这篇文章中介绍了逆向工程思维是什么 —— 去探究新知识点，并为之兴奋;
 - [x] [Practical application of reverse-engineering guidelines and principles](https://medium.com/react-in-depth/practical-application-of-reverse-engineering-guidelines-and-principles-784c004bb657): 结合 React 介绍逆向工程思维;
-- [ ] [How to Contribute](https://reactjs.org/docs/how-to-contribute.html)
+- [x] [How to Contribute](https://reactjs.org/docs/how-to-contribute.html)
