docs: adjust dir

--- a/BasicSkill/css/css揭秘/背景与边框.md
+++ b/BasicSkill/css/css揭秘/背景与边框.md
@@ -10,7 +10,7 @@
   .translucent-border {
     width: 100px;
     height: 100px;
-    border: 10px solid hsla(0, 0%, 100%, .5);
+    border: 10px solid rgba(255, 255, 255, .5);
     background: white;
     background-clip: padding-box; // 这个属性能让背景和边框分离
   }
@@ -23,6 +23,8 @@
 效果图
 
 ![](http://with.muyunyun.cn/8e59c47dabc2eef7eb923b25811d1e44.jpg-200)
+
+[半透明边框](https://codepen.io/MuYunyun/pen/vPyOpB)
 
 #### 多重边框
 
