--- a/BasicSkill/css/字体单位.md
+++ b/BasicSkill/css/字体单位.md
@@ -2,12 +2,12 @@
 
 #### 相对视窗
 
-* vw: 视窗宽度的 1/100;
-* vh: 视窗高度的 1/100;
-* vmin: 取视窗宽度和视窗高度最小值的 1/100;
-* vmax: 取视窗宽度和视窗高度最大值的 1/100;
+* `1vw`: 视窗宽度的 1/100, 100 vw 等于整个视窗宽度;
+* `1vh`: 视窗高度的 1/100, 100 vh 等于整个视窗高度;
+* `1vmin`: 取视窗宽度和视窗高度最小值的 1/100;
+* `1vmax`: 取视窗宽度和视窗高度最大值的 1/100;
 
 #### 相对 font-size
 
-* rem: 相对 html 中的 font-size 来转换的(如果根元素的 font-size 小于 12px 则以 12px 来计算);
-* em: 相对父元素(或者自己层级)的 font-size 来转换的;
+* `rem`: 相对 html 中的 font-size 来转换的(如果根元素的 font-size 小于 12px 则以 12px 来计算);
+* `em`: 相对父元素(或者自己层级)的 font-size 来转换的;
