docs: collect css

--- a/BasicSkill/css/css揭秘/结构与布局.md
+++ b/BasicSkill/css/css揭秘/结构与布局.md
@@ -8,3 +8,12 @@
   width: 100%;
 }
 ```
+
+* 背景占屏幕全宽，内容的长度定宽
+
+```css
+.footer {
+  padding: 1em calc(100% - 450px); /* 暗藏内容宽度为 900 px */
+  background: #ccc;
+}
+```
