--- a/BasicSkill/css/css揭秘/背景与边框.md
+++ b/BasicSkill/css/css揭秘/背景与边框.md
@@ -1,5 +1,10 @@
 ### 背景与边框
 
+以下为与背景与边框相关比较有用的属性。
+
+* `background-origin`: 属性值有 `border-box/padding-box/content-box`。默认为 `padding-box`。
+* `background-clip`: 属性值有 `border-box/padding-box/content-box`。默认值为 `border-box`。
+
 #### 半透明边框
 
 ```html
@@ -12,7 +17,7 @@
     height: 100px;
     border: 10px solid rgba(255, 255, 255, .5);
     background: white;
-    background-clip: padding-box; // 这个属性能让背景和边框分离
+    background-clip: padding-box; /* 这个属性能让背景和边框分离 */
   }
 </style>
 <body>
@@ -28,19 +33,23 @@
 
 #### 多重边框
 
-* 方案一: box-shadow
+* 方案一: `box-shadow`
 
 ```css
-background: white;
-box-shadow: 0 0 0 10px #655, 0 0 0 15px deeppink;
+.demo {
+  background: white;
+  box-shadow: 0 0 0 10px #655, 0 0 0 15px deeppink;
+}
 ```
 
-* 方案二: outline
+* 方案二: `outline`
 
 ```css
-background: white;
-border: 10px solid #655;
-outline: 5px solid deeppink;
+.demo {
+  background: white;
+  border: 10px solid #655;
+  outline: 5px solid deeppink;
+}
 ```
 
 ![](http://with.muyunyun.cn/622ab7417df7af16671522a3849690b7.jpg-200)
