--- a/BasicSkill/css/css揭秘/过渡与动画.md
+++ b/BasicSkill/css/css揭秘/过渡与动画.md
@@ -1,7 +1,17 @@
-### translate
+### 两个核心的 api
 
-x: 水平向右
-y: 竖直向下
-z: 与屏幕垂直指向使用者
+* 过渡 `transition`
+* 动画 `animation`
+  * 调用动画: `animation:name` 要与 @keyframes 连用
+  * 设置动画播放时间: `animation-duration: 2s`   完成从 0% 到 100% 一次动画所需时间
+  * 设置动画播放方式: `animation-timing-function`。`step()` 逐帧效果; 此外还有 `linear`、`ease` 等线性效果, 甚至 `cubic-bezier`
+  * 设置动画开始播放的时间: `animation-delay`
+  * 设置动画播放次数: `animation-iteration-count`:infinate(无限次)
+  * 设置动画播放方向: `animation-direction`:normal(默认) / alternate（偶数次反方向播放）
+  * 设置动画的播放状态: `animation-play-state`:running(默认)/paused(暂停效果)
+  * 设置动画时间外属性: `animation-fill-mode`:none/forwards/backwords/both
 
-* [缓动效果](https://codepen.io/MuYunyun/pen/EMmNZN)
+### 一些案例
+
+* 缓动效果: [小球落地](https://codepen.io/MuYunyun/pen/EMmNZN): 涉及到弹框效果的动画, 可以参考此节;
+* 打字效果: 如果是`单行的打字效果`可以使用 css 进行实现, 思路借助 `animaition` 的 `step` 以及文本的宽度;
