--- a/BasicSkill/编程范式/函数式编程入门.md
+++ b/BasicSkill/编程范式/函数式编程入门.md
@@ -162,7 +162,7 @@ var head = (arr) => arr[0]
 ```js
 var reverseHeadUpperCase = (arr) => toUpperCase(head(reverse(arr)))
 
-reverseHeadUpperCase(['apple', 'banana', 'peach']) // "PEACH"
+reverseHeadUpperCase(['apple', 'banana', 'peach']) // PEACH
 ```
 
 此时在构建 `reverseHeadUpperCase` 函数的时候, 必须手动声明传入参数 arr, 是否能提供一个 `compose` 函数让使用者更加友好的使用呢? 类似如下形式:
@@ -170,7 +170,7 @@ reverseHeadUpperCase(['apple', 'banana', 'peach']) // "PEACH"
 ```js
 var reverseHeadUpperCase = compose(toUpperCase, head, reverse)
 
-reverseHeadUpperCase(['apple', 'banana', 'peach']) // "PEACH"
+reverseHeadUpperCase(['apple', 'banana', 'peach']) // PEACH
 ```
 
 此外 `compose` 函数符合`结合律`, 我们可以这样子使用:
