--- a/BasicSkill/readES6/扩展运算符.md
+++ b/BasicSkill/readES6/扩展运算符.md
@@ -4,11 +4,11 @@
 
 1. `...` 当作对象扩展符使用时可以用来*浅拷贝*目标对象的*自有属性中的可枚举属性*。
 
-> 番外: 对象中的扩展运算符的作用类似 Object.assign(), 唯一区别在于 Object.assign() 可以用来*浅拷贝*目标对象的*全部属性(包括原型链上属性)中的可枚举属性*
+> 对象中的扩展运算符的作用等同于 Object.assign()。
 
 下面举例证明上述结论:
 
-* 验证对象扩展符只能 copy 自有属性, 原型链上的属性不能 copy
+* 验证对象扩展符只能 `copy` 自有属性, 原型链上的属性不能 `copy`
 
 ```js
 class Demo {
