docs: React Schedule 源码解析

--- a/BasicSkill/css/css揭秘/背景与边框.md
+++ b/BasicSkill/css/css揭秘/背景与边框.md
@@ -59,10 +59,14 @@
 * 偏移量与容器内边距相同
 [background-origin 属性用法](http://play.csssecrets.io/background-origin)
 
-* 使用 calk:
+* 使用 `calc`:
 [calc 使用](http://dabblet.com/gist/b5fcb42d055427ab6c1a)
 
 ```css
-background-position: calc(100% - 20px) calc(100% - 10px) // calc 里面的 -、+ 前后要各加个空格
+.demo {
+  background-position: calc(100% - 20px) calc(100% - 10px) /* calc 里面的 -、+ 前后要各加个空格 */
+}
 ```
+
+- [ ] 阅读到边框内圆角
 
