--- a/React/组件开发/编写具有弹性的组件.md
+++ b/React/组件开发/编写具有弹性的组件.md
@@ -2,8 +2,15 @@
 
 * 不要将 props 赋给 state
 
-理由: 如果不结合 `componentDidUpdate` 会造成无法读取到更新的数据; 结合了 `componentDidUpdate` 在其进行 `setState` 又会进行多一次的 render。
+理由: 如果不结合使用 `componentDidUpdate` 会无法读取到更新的数据; 结合了 `componentDidUpdate` 在其进行 `setState` 又会进行多一次的 render。
 
-方案: 使用 `useMemo`(hooks) 或者在 render 中使用 `memorize-one`(class)
+解决方案
 
-- [ ] [writing-resilient-components/](https://overreacted.io/writing-resilient-components/) 阅读到 Note that it is important to respect all prop and state updates for effects
+* 直接在 render 中获取父组件传下来的数据; 结合 useMemo 进行优化;
+* 只使用受控组件或者只使用非受控组件;
+
+> 另外针对一些复杂数据使用 useMemo 以及 memorize-one 进行处理。或者 `hooks` 中在 render 内使用 `useMemo`; `class` 中在 render 内使用 `memorize-one`
+
+### 相关资料
+
+- [writing-resilient-components/](https://overreacted.io/writing-resilient-components/)
