--- a/React/从0到1实现React/6.ref.md
+++ b/React/从0到1实现React/6.ref.md
@@ -136,3 +136,25 @@ class B extends Component {
 效果如下:
 
 ![](http://with.muyunyun.cn/reactref%E6%B5%8B%E8%AF%951)
+
+### React.forwordRef 使用场景
+
+`React.forwordRef` 后面跟一个 `render` 函数。用法如下:
+
+```js
+function HOCComponent(WrapComponent) {
+  return class extends React.Component {
+    render() {
+      const { ref, ...rest } = this.props
+      return <WrapComponent ref={ref} { ...rest } />
+    }
+  }
+}
+
+// 此时的 ref 指向的是, 高阶组件里包裹的 WrapComponent 组件。
+const Demo = React.forworRef((props, ref) => {
+  return <HOCComponent { ...props } ref={ref} />
+})
+```
+
+使用场景: 需要引用高阶组件里的子组件节点的时候可以使用 `React.forwordRef`
