--- a/React/源码贡献之路.md
+++ b/React/源码贡献之路.md
@@ -35,11 +35,15 @@
 
 * [packages/react](https://github.com/facebook/react/tree/master/packages/react): 包含 React.createElement()、React.component、React.children;
 * [packages/react-dom](https://github.com/facebook/react/tree/master/packages/react-dom): 浏览器端渲染;
+* [packages/events](https://github.com/facebook/react/tree/master/packages/events): 合成事件;
+* [packages/scheduler](https://github.com/facebook/react/tree/master/packages/scheduler): 调度事件;
 * [packages/react-native-renderer](https://github.com/facebook/react/tree/master/packages/react-native-renderer): `React-Native` 端渲染
 * [packages/react-test-renderer](https://github.com/facebook/react/tree/master/packages/react-test-renderer): 用在 `jest` 的 `Snapshot Test` 中;
 * [packages/react-art](https://github.com/facebook/react/tree/master/packages/react-art): `Canvas`, `SVG` 等渲染;
 * [packages/react-reconciler](https://github.com/facebook/react/tree/master/packages/react-reconciler): `Fiber Reconciler` 的实现;
-* [packages/events](https://github.com/facebook/react/tree/master/packages/events): 合成事件;
+* [packages/shared](https://github.com/facebook/react/tree/master/packages/shared): 共享工具函数;
+
+> 最为重要的是前 4 块内容。
 
 ### 设计原则
 
