--- a/React/从0到1实现React/6.ref.md
+++ b/React/从0到1实现React/6.ref.md
@@ -137,9 +137,9 @@ class B extends Component {
 
 ![](http://with.muyunyun.cn/reactref%E6%B5%8B%E8%AF%951)
 
-### React.forwordRef 使用场景
+### React.forwardRef 使用场景
 
-`React.forwordRef` 后面跟一个 `render` 函数。用法如下:
+`React.forwardRef` 后面跟一个 `render` 函数。用法如下:
 
 ```js
 function HOCComponent(WrapComponent) {
@@ -152,7 +152,7 @@ function HOCComponent(WrapComponent) {
 }
 
 // 此时的 ref 指向的是, 高阶组件里包裹的 WrapComponent 组件。
-const Demo = React.forworRef((props, ref) => {
+const Demo = React.forwardRef((props, ref) => {
   return <HOCComponent { ...props } ref={ref} />
 })
 ```
