--- a/BasicSkill/css/css揭秘/过渡与动画.md
+++ b/BasicSkill/css/css揭秘/过渡与动画.md
@@ -16,6 +16,10 @@
 * 缓动效果: [小球落地](https://codepen.io/MuYunyun/pen/EMmNZN): 涉及到弹框效果的动画, 可以参考此节;
 * 打字效果: 如果是`单行的打字效果`可以使用 css 进行实现, 思路借助 `animaition` 的 `step` 以及文本的宽度;
 
-###
+### 缓动算法
 
 - [ ] [缓动算法](https://www.zhangxinxu.com/wordpress/2017/01/share-a-animation-algorithm-js/), 有时间进行 read。
+
+### transition 属性使用坑点
+
+在变化前后的两个位置上, 改变以下属性会使动画失效。`display/text-align`
