--- a/BasicSkill/css/移动端场景知识总结.md
+++ b/BasicSkill/css/移动端场景知识总结.md
@@ -37,3 +37,20 @@
 
 以竖直滑动为例: 在外层设置宽度为 400px(假设内容宽度为 400px)并设置 `overflow-x: hidden`, 内层宽度为 417px(17px 为滚动条宽度)。
 
+### 解决 ios 下输入框自带圆角的问题;
+
+```css
+.demo {
+  -webkit-appearance: none;
+}
+```
+
+> 见 SearchBar 组件开发
+
+### ios 下 input 光标大小调整
+
+在 ios 中: 该行无文字时, 光标高度与 `line-height` 一致; 该行有文字时, 光标高度从 `input` 顶部到文字底部(这两种情况都是在有设定 `line-height` 的时候)，如果没有 `line-height`，则是与 `font-size` 一致(可能表述有误差)。
+
+解决方法如下: 设置 `line-height` 为一个较小值(期望的光标大小), 再用 `padding` 来撑开 `input` 的区域;
+
+> 见 SearchBar 组件开发
