--- a/BasicSkill/css/css揭秘/用户体验.md
+++ b/BasicSkill/css/css揭秘/用户体验.md
@@ -2,7 +2,7 @@
 
 * [扩大可选区域大小](https://codepen.io/MuYunyun/pen/YgNxBL): 使用伪元素
 
-* [自定义复选框(了解)](https://codepen.io/MuYunyun/pen/jJyYyJ)
+* [自定义复选框](https://codepen.io/MuYunyun/pen/jJyYyJ): 见 [CheckBox 组件](https://github.com/MuYunyun/blog/blob/master/React/%E7%BB%84%E4%BB%B6%E5%BC%80%E5%8F%91/CheckBox.md) 开发
 
 * 遮罩层
 
