--- a/BasicSkill/css/css揭秘/过渡与动画.md
+++ b/BasicSkill/css/css揭秘/过渡与动画.md
@@ -2,14 +2,14 @@
 
 * 过渡 `transition`
 * 动画 `animation`
-  * 调用动画: `animation:name` 要与 @keyframes 连用
-  * 设置动画播放时间: `animation-duration: 2s`   完成从 0% 到 100% 一次动画所需时间
-  * 设置动画播放方式: `animation-timing-function`。`step()` 逐帧效果; 此外还有 `linear`、`ease` 等线性效果, 甚至 `cubic-bezier`
-  * 设置动画开始播放的时间: `animation-delay`
-  * 设置动画播放次数: `animation-iteration-count`:infinate(无限次)
-  * 设置动画播放方向: `animation-direction`:normal(默认) / alternate（偶数次反方向播放）
-  * 设置动画的播放状态: `animation-play-state`:running(默认)/paused(暂停效果)
-  * 设置动画时间外属性: `animation-fill-mode`:none/forwards/backwords/both
+  * 调用动画: `animation:name` 要与 @keyframes 连用;
+  * 设置动画播放时间: `animation-duration: 2s`   完成从 0% 到 100% 一次动画所需时间;
+  * 设置动画播放方式: `animation-timing-function`。`step()` 逐帧效果; 此外还有 `linear`、`ease` 等线性效果, 也可以使用 `cubic-bezier`;
+  * 设置动画开始播放的时间: `animation-delay`;
+  * 设置动画播放次数: `animation-iteration-count`:infinate(无限次);
+  * 设置动画播放方向: `animation-direction`:normal(默认)、alternate (偶数次反方向播放);
+  * 设置动画的播放状态: `animation-play-state`:running(默认)、paused(暂停效果);
+  * 设置动画时间外属性: `animation-fill-mode`:none/forwards/backwords/both;
 
 ### 一些案例
 
@@ -22,4 +22,4 @@
 
 ### transition 属性使用坑点
 
-在变化前后的两个位置上, 改变以下属性会使动画失效。`display/text-align`
+在变化前后的两个位置上, 改变布局相关属性会使动画失效。比如 `display、text-align`。
