feat: 组件开发填坑

--- a/BasicSkill/css/移动端场景知识总结.md
+++ b/BasicSkill/css/移动端场景知识总结.md
@@ -54,3 +54,10 @@
 解决方法如下: 设置 `line-height` 为一个较小值(期望的光标大小), 再用 `padding` 来撑开 `input` 的区域;
 
 > 见 SearchBar 组件开发
+
+### 移动端 1px 解决方案
+
+手机屏幕上存在 `devicePixelRatio` 属性, 其值为物理像素和屏幕像素之比。
+
+方案一: 伪元素 + `transform: scaleY(0.5)`;
+方案二: 使用 box-shadow。例: `box-shadow: 0px -1px 0px 0px rgba(245, 245, 245, 1)`;
