--- a/BasicSkill/css/css小书/背景与边框.md
+++ b/BasicSkill/css/css小书/背景与边框.md
@@ -5,6 +5,16 @@
 * `background-origin`: 属性值有 `border-box/padding-box/content-box`。默认为 `padding-box`。
 * `background-clip`: 属性值有 `border-box/padding-box/content-box`。默认值为 `border-box`。
 
+#### 图片自适应
+
+```css
+.demo {
+  width: 200px;
+  height: 100px;
+  background-size: cover;
+}
+```
+
 #### 半透明边框
 
 ```html
