feat: about test

--- a/BasicSkill/css/移动端场景知识总结.md
+++ b/BasicSkill/css/移动端场景知识总结.md
@@ -60,4 +60,12 @@
 手机屏幕上存在 `devicePixelRatio` 属性, 其值为物理像素和屏幕像素之比。
 
 方案一: 伪元素 + `transform: scaleY(0.5)`;
-方案二: 使用 box-shadow。例: `box-shadow: 0px -1px 0px 0px rgba(245, 245, 245, 1)`;
+方案二: 使用 box-shadow。
+
+`box-shadow` 这个方案有个缺陷是画上划线容易。方式如下:
+
+```
+box-shadow: 0px -1px 0px 0px rgba(245, 245, 245, 1);
+```
+
+但是缺陷是画下划线不便, 需要配合 `position: relative` 以及 `z-index` 来调整层级。
