--- a/BasicSkill/css/css小书/结构与布局.md
+++ b/BasicSkill/css/css小书/结构与布局.md
@@ -1,16 +1,24 @@
-### display: block/inline-block/inline 的区别
+### display(布局)
 
 * `block`: 有宽高, 不在同一行;
-* `inline-block`: 有宽高，在同一行;
+* `inline-block`: 有宽高，在同一行; 父节点上使用 `inline-block` 会自动获取子节点的宽度。
 * `inline`: 无宽高, 在同一行;
 
-### position
+### position(位置)
 
 * relative: 元素根据正常的文档流相进行定位;
-* absolute: 脱离当前文档流, 相对其最近的 `position` 属性值为非 `static` 祖先元素进行定位, 直到 body。
-* fixed: 脱离当前文档流, 相对视窗定位。注意: 当父元素上有这几个属性时, `transform`, `perspective`, `filter` 时, fixed 定位会失效。
+* absolute: 脱离当前文档流, 相对其最近的 `position` 属性值为非 `static` 祖先元素进行定位, 直到 body;
+* fixed: 脱离当前文档流, 相对视窗定位。注意: 当父元素上有这几个属性时, `transform`, `perspective`, `filter` 时, fixed 定位会失效;
+* sticky: relative 与 fixed 的结合;
 
-> position 是位置相关, display 是布局相关;
+使用 sticky 布局有一些限制:
+
+```html
+<div>
+  <div style="position: sticky; top: 20px; background: pink; margin-top: 50px;">Header</div>
+  <div style="height: 1000px">Content</div> // 比如这一行不可或缺
+</div>
+```
 
 ### margin
 
